# plover-stenohid-experiment

./: README.rst  derivation.nix  find_dev.py  finger-positions.md  hiddev.py  keymap-compressor.py  plover_qmk.py  setup.cfg
plover_qmk/: find_dev.py  hidapi_backend.py  hiddev.py  linux_backend.py
