[metadata]
name = plover-stenohid
version = 0.1.0
description = testing a steno HID protocol for plover + qmk
long_description = file: README.rst
author = Antonius Frie
author_email = antonius.frie@ruhr-uni-bochum.de
license = GNU General Public License v2 or later (GPLv2+)
url = https://github.com/antoniusf/plover-stenohid-experiment
classifiers =
	Development Status :: 3 - Alpha
	Environment :: Plugins
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Operating System :: OS Independent
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
keywords = plover plover_plugin

[options]
zip_safe = True
setup_requires =
	setuptools>=34.4.0
	setuptools-scm
install_requires =
	plover>=4.0.0.dev0
	hidapi
packages =
  plover_qmk

[options.entry_points]
plover.machine =
	QMK = plover_qmk.hidapi_backend:QMK

[bdist_wheel]
universal = 1

# vim: commentstring=#\ %s list
