[metadata]
name = plover-stenohid
version = 0.1.1
description = Support for a generic HID steno protocol in plover
long_description = file: README.rst
authors = Antonius Frie
license = GNU General Public License v2 or later (GPLv2+)
url = asdf
classifiers =
	Development Status :: 5 - Production/Stable
	Environment :: Plugins
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Operating System :: OS Independent
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
keywords = plover plover_plugin

[options]
zip_safe = True
setup_requires =
	setuptools>=34.4.0
	setuptools-scm
install_requires =
	plover>=4.0.0.dev0
packages =
  plover_qmk

[options.entry_points]
plover.linux.machine =
	QMK = plover_qmk.linux_backend:QMK

[bdist_wheel]
universal = 1

# vim: commentstring=#\ %s list
